# webrogue_rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
.github/workflows/: apple.yml  dry_build.yml  dry_run.yml
.github/workflows /: dry_build.yml
android/: .gitignore  build.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  webrogue_runtime.cpp
android/app/src/main/rust/: Cargo.toml
android/app/src/main/rust/src/: lib.rs
android/gradle/: libs.versions.toml
apple/: .gitignore  project.yml  setup.command
apple/Common/WebrogueCommon/: Info.plist
apple/iOS/: Info.plist
apple/iOS/Source/: AngleHelperSystem.swift  AngleHelperWindow.swift  WebrogueAppDelegate.swift  WebrogueView.swift  WrappRefView.swift  main.h  main.mm  webrogue-Bridging-Header.h  webrogue_gfx_ffi.m
apple/iOS/rust/: Cargo.toml
apple/macOS/launcher/: Info.plist
apple/macOS/runtime/: runtime.entitlements
apple/macOS/runtime/rust/: Cargo.toml
apple/macOS/runtime/rust/scripts/: cargo_lipo_builder.sh
apple/macOS/runtime/rust/src/: lib.rs
apple/scripts/: download_sdl_src.sh  fetch_dependencies.sh  fetch_dependencies2.sh
apple/webrogue.xcodeproj/: project.pbxproj
apple/webrogue.xcworkspace/: contents.xcworkspacedata
artwork/logo/: convert.Dockerfile  convert.sh  convert_using_docker.sh
crates/backend_v8/: Cargo.toml
crates/backend_v8/macro/: Cargo.toml
crates/backend_v8/macro/src/: lib.rs
crates/backend_v8/src/: context.rs  imports.rs  lib.rs  link_functions.rs  memory.rs  runtime.rs
crates/backend_v8/v8_src/crates_io/: Cargo.toml
crates/backend_v8/v8_src/submodule/: Cargo.toml
crates/backend_wasm3/: Cargo.toml
crates/backend_wasm3/macro/: Cargo.toml
crates/backend_wasm3/macro/src/: lib.rs
crates/backend_wasm3/src/: link_functions.rs  memory.rs  runtime.rs
crates/backend_wasmer/: Cargo.toml
crates/backend_wasmer/macro/: Cargo.toml
crates/backend_wasmer/src/: context.rs  imports.rs  lib.rs  runtime.rs
crates/backend_wasmtime/: Cargo.toml
crates/backend_wasmtime/macro/: Cargo.toml
crates/backend_wasmtime/macro/src/: lib.rs
crates/backend_wasmtime/src/: imports.rs  lib.rs  memory.rs  runtime.rs  wrapped_funcs.rs
crates/gfx/: Cargo.toml  defs.in
crates/gfx/src/: backend.rs  lib.rs
crates/gfx_ffi/: Cargo.toml
crates/gfx_ffi/src/: lib.rs  webrogue_gfx_ffi.h  webrogue_gfx_ffi_sdl2.c  webrogue_gfx_ffi_sdl3.c
crates/gfx_rust_sdl/: Cargo.toml  build.rs
crates/gfx_rust_sdl/src/: lib.rs  load_gl.rs
crates/gl/: .gitignore  Cargo.toml  Makefile  build.rs  defs.in  run.py
crates/gl/src/: api.rs  compsize.rs  context.rs  ffi.rs  lib.rs  mainual_impl.rs  mainual_impl_wr_gl.rs  proc_addresses.rs  utils.rs  wr_gl.rs
crates/gl/util_crates/: Cargo.toml
crates/gl/util_crates/builder/: Cargo.toml
crates/gl/util_crates/builder/src/: main.rs
crates/gl/util_crates/common/: Cargo.toml
crates/gl/util_crates/common/src/: c_guest.rs  c_guest_loader.rs  common.rs  lib.rs  parse.rs  proc_addresses.rs  rust_ffi.rs  rust_wasm_imports_imps.rs  types.rs  wr_defs.rs
crates/gl/util_crates/macro/: Cargo.toml
crates/gl/util_crates/macro/src/: lib.rs
crates/gl/util_crates/src/: main.rs
crates/macro_common/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: backend.rs  context.rs  imported_functions.in  imported_functions.rs  lib.rs  lifecycle.rs  memory.rs  runtime.rs
crates/std_stream_os/: Cargo.toml
crates/std_stream_os/src/: lib.rs
crates/std_stream_sdl/: Cargo.toml
crates/wasi/: Cargo.toml  defs.in
crates/wasi/src/: wasi_snapshot_preview1.rs
crates/wasi_sync/: Cargo.toml
crates/webrogue_backend_wasm3/: Cargo.toml
crates/webrogue_backend_wasm3/src/: lib.rs  link_functions.rs  memory.rs  runtime.rs
crates/webrogue_backend_wasmer/: Cargo.toml
crates/webrogue_backend_wasmer/src/: memory.rs
crates/webrogue_backend_wasmtime/: Cargo.toml
crates/webrogue_macros/: Cargo.toml
crates/webrogue_runtime/: Cargo.toml
crates/webrogue_runtime/src/: backend.rs  context.rs  dir.rs  file.rs  funcs.in  imported_function_defenition.rs  imported_functions.in  imported_functions.rs  imported_functions_impl.rs  lib.rs  lifecycle.rs  memory.rs  random.rs  raw_value.rs  runtime.rs  sched.rs  value_type.rs  wasi_factory.rs  wasm_memory_types.rs
crates/webrogue_runtime/src/imported_functions/: wasi_snapshot_preview1.rs  webrogue.rs
crates/webrogue_runtime/src/sched/: unix.rs  windows.rs
crates/webrogue_std_stream_os/: Cargo.toml
crates/webrogue_std_stream_sdl/: Cargo.toml
crates/webrogue_std_stream_sdl/src/: lib.rs
crates/webrogue_wasi_sync/: Cargo.toml
crates/webrogue_wasm3_backend/: Cargo.toml  build.rs
crates/webrogue_wasmtime_backend/: Cargo.toml
crates/webrogue_wasmtime_backend/src/: imports.rs  lib.rs  memory.rs  runtime.rs
crates/wrapp/: Cargo.toml
crates/wrapp_cli/: Cargo.toml  simple.wrapp
example_apps/: .gitignore  Makefile
example_apps/opengl/: .gitignore  Makefile  sdl2-opengl.c
example_apps/simple/: Makefile  main.c
example_mods/: .gitignore
example_mods/simple/: .gitignore  build.sh  main.c
ios/: .gitignore  CMakeLists.txt  Cargo.toml  LaunchScreen.storyboard  build.sh  configure.sh  info.plist.in
ios/Source/: WebrogueUIViewController.swift  WebrogueView.swift  webrogue-Bridging-Header.h
ios/Sources/: WebrogueAppDelegate.swift  WebrogueUIViewController.swift  main.h  main.mm
ios/scripts/: cargo_lipo_builder.sh  fetch_dependencies.sh
ios/src/: WebrogueAppDelegate.swift  lib.rs  main.mm  webrogue-Bridging-Header.h
ios/webrogue.xcodeproj/: project.pbxproj
ios/webrogue.xcodeproj/xcshareddata/xcschemes/: webrogue.xcscheme
src/: main.rs
web/: CMakeLists.txt  Cargo.toml  build.sh  host.sh  patches  worker_proto.md
web/.cargo/: config.toml
web/crates/backend/: Cargo.toml
web/crates/backend/macro/: Cargo.toml
web/crates/backend/macro/src/: lib.rs
web/crates/backend/src/: backend.rs  context.rs  em_js.c  em_js_async.c  ffi.rs  imports.rs  lib.rs  runtime.rs
web/root/: .gitignore  webrogue.html  worker_async.js
web/src/: lib.rs  main.c
(+62 files in other folders)
