[package]
name = "webrogue_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
default = ["gl"]
gl = ["dep:webrogue_gl", "dep:webrogue_gfx", "dep:webrogue_gfx_ffi"]

[dependencies]
webrogue_runtime = { path = "../crates/runtime" }
webrogue_wasi_sync = { path = "../crates/wasi_sync" }
webrogue_std_stream_os = { path = "../crates/std_stream_os", default-features = false }
webrogue_backend_web = { path = "crates/backend" }
anyhow = { version = "1" }
webrogue_wasi = { path = "../crates/wasi" }
webrogue_gl = { path = "../crates/gl", optional = true }
webrogue_gfx = { path = "../crates/gfx", optional = true }
webrogue_gfx_ffi = { path = "../crates/gfx_ffi", optional = true }
