[package]
name = "webrogue_backend_wasm3"
version = "0.1.0"
edition = "2021"

[dependencies]
webrogue_runtime = { path = "../runtime"}
anyhow = { version = "1" }
wasm3 = { git = "https://github.com/wasm3/wasm3-rs.git", default-features = false, features = ["build-bindgen", "std", "use-32bit-slots"] }
webrogue_backend_wasm3_macro = { path = "macro" }
