[package]
name = "webrogue_backend_wasmtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { path = "../../external/wasmtime/crates/wasmtime" }
webrogue_runtime = { path = "../runtime"}
webrogue_gl = { path = "../gl"}
webrogue_wasi = { path = "../wasi" }
anyhow = { version = "1" }
webrogue_backend_wasmtime_macro = { path = "macro" }
