[package]
name = "webrogue_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
webrogue_wrapp = { path = "../wrapp" }
# TODO no submodule
wasi-common = { path = "../../external/wasmtime/crates/wasi-common", default-features = false, features = ["trace_log"] }
wiggle = { path = "../../external/wasmtime/crates/wiggle", default-features = false }
futures =  { version = "0.3" }
wasmparser = { version = ">=0.215"}
