[package]
name = "webrogue_wasi"
version = "0.1.0"
edition = "2021"

[dependencies]
webrogue_runtime = { path = "../runtime" }
wasi-common = { path = "../../external/wasmtime/crates/wasi-common", default-features = false, features = ["trace_log"] }
wiggle = { path = "../../external/wasmtime/crates/wiggle", default-features = false, features = ["wiggle_metadata"] }
futures =  { version = "0.3" }
anyhow = { version = "1" }
