[package]
name = "webrogue_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }

# TODO no submodule
wasi-common = { path = "../../external/wasmtime/crates/wasi-common", default-features = false, features = ["trace_log", "sync" ] }
wiggle = { path = "../../external/wasmtime/crates/wiggle" }
futures = "0.3"
