[package]
name = "webrogue_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }

# TODO no submodule
wasi-common = { path = "../../external/wasmtime/crates/wasi-common", default-features = false, features = ["trace_log"] }
wiggle = { path = "../../external/wasmtime/crates/wiggle", default-features = false }
futures = "0.3"
cap-rand = "3.1"
cap-std = "3.1"
cap-time-ext = "3.1"
cap-fs-ext = "3.1"
system-interface = { version = "0.27", features = ["cap_std_impls"] }
fs-set-times = "0.20"
io-lifetimes = { version = "2.0", default-features = false }
rustix = "0.38"
