[package]
name = "webrogue_std_stream_sdl"
version = "0.1.0"
edition = "2021"

[dependencies]
webrogue_runtime = { path = "../webrogue_runtime" }
sdl2 = { path = "../../external/rust-sdl2", features = ["bundled", "ttf", "bundled-ttf", "static-link"] }
fs-set-times = "0.20.1"
system-interface = { version = "0.27.1", features = ["cap_std_impls"] }
io-lifetimes = { version = "2.0.3", default-features = false }
wiggle = { path = "../../external/wasmtime/crates/wiggle", default-features = false  }
utf8parse = { version = "0.2" }


[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.31", features = ["fs", "event"] }

[target.'cfg(windows)'.dependencies]
rustix = { version = "0.38.31", features = ["net"] }
io-extras = "0.18.1"
