[package]
name = "webrogue_android"
version = "0.1.0"
edition = "2021"

[lib]
name = "webrogue_android"
crate-type = ["staticlib"]

[features]
default = ["backend_wasmtime"]
backend_v8 = ["dep:webrogue_backend_v8"]
backend_wasmtime = ["dep:webrogue_backend_wasmtime"]

[dependencies]
anyhow = { version = "1" }
webrogue_runtime = { path = "../../../../../crates/runtime" }
webrogue_backend_v8 = { path = "../../../../../crates/backend_v8", optional = true }
webrogue_backend_wasmtime = { path = "../../../../../crates/backend_wasmtime", default-features = false, optional = true }
webrogue_wasi = { path = "../../../../../crates/wasi" }
webrogue_wasi_sync = { path = "../../../../../crates/wasi_sync" }
webrogue_gl = { path = "../../../../../crates/gl" }
webrogue_gfx = { path = "../../../../../crates/gfx" }
webrogue_std_stream_os = { path = "../../../../../crates/std_stream_os", default-features = false }

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.31", features = ["fs", "event"] }

[target.'cfg(windows)'.dependencies]
rustix = { version = "0.38.31", features = ["net"] }
io-extras = "0.18.1"
